2013-11-29  Joern Rennecke  <joern.rennecke@embecosm.com>

	* symlink-dirs.sh: New script.
	* symlink-all.sh: Use it.
2013-11-27  Simon Cook  <simon.cook@embecosm.com>

	* windows-installer/ChangeLog: Describe steps to cross-compile ELF32
	toolchain for Windows.

2013-11-20  Anton Kolesov  <anton.kolesov@synopsys.com>

	* extras/opella-xd/arcem-cpu.xml: New file. Contains AUX registers
	description for the Ashling gdbserver for the Opella-XD probe.

2013-11-18  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-elf32.sh, build-uclibc.sh: If PDF docs build failed, suggest
	user to read Prerequisites section of documentation or use option
	--no-pdf.

2013-11-12  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-all.sh: Fix reference to section from readme, invalid name has
	been used. Also remove debug echo left from development.

2013-10-30  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-all.sh: Decide default value for auto-pull/checkout based on
	whether toolchain directory is a Git repository or not. Checkout and
	pull if it is a repository and do nothing if it is a directory from
	source tarball.

2013-10-30  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-all.sh: Give more detailed error message if Linux sources are
	mussing.
	* README.md: Add details on getting Linux sources.

2013-10-29  Anton Kolesov  <anton.kolesov@synopsys.com>

	* README.md: Add example of usage with Opella-XD debug probe.

2013-10-10  Anton Kolesov <Anton.Kolesov@synopsys.com>

	* README.md: Update examples, add examples for uClibc and EM Starter Kit.

2013-10-09  Anton Kolesov <Anton.Kolesov@synopsys.com>

	* arc-versions.sh: Support Git 1.8 which have different output from
	previous versions.

2013-10-09  Anton Kolesov <Anton.Kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp: Fix constant nsim_gdb	reboots. It was caused by
	output buffer becoming full and not cleared by expect.

2013-10-09  Anton Kolesov <Anton.Kolesov@synopsys.com>
